# bazel-practice

./: .gitignore  README.md
chapter6/empty/: BUILD  empty.bzl  printer.bzl
gazelle1/: .gitignore  BUILD  README.md  WORKSPACE  deps.bzl  go.mod
gazelle1/app1/: BUILD.bazel  main.go
stage1/: go.mod
stage2/app/: go.mod
stage2/app/cmd/: BUILD  main.go
stage2/lib/: go.mod
stage2/lib/message/: BUILD  hello.go
stage3/: WORKSPACE
stage3/app/: go.mod
stage3/app/cmd/: BUILD  main.go
stage4/: WORKSPACE  externals.BUILD
stage4/app/: go.mod
stage4/app/cmd/: BUILD  main.go
